Added Controls FX
Made credits + Settingsx